restructuring design chapter

--- a/_posts/thesis_chapters/2024-9-5-Design.md
+++ b/_posts/thesis_chapters/2024-9-5-Design.md
@@ -15,6 +15,27 @@ title: 5. Exploration of the Formative Learning Design Process
     -   [Research Questions - April
         2024](#research-questions---april-2024)
     -   [Chapter Introduction](#chapter-introduction)
+    -   [Analysis of dimensions of game making activity using 3GAT
+        framework](#analysis-of-dimensions-of-game-making-activity-using-3gat-framework)
+        -   [Environmental factors and
+            objectives](#environmental-factors-and-objectives)
+        -   [Activity system 1 - a novice game making community making
+            games as a learning
+            experience](#activity-system-1---a-novice-game-making-community-making-games-as-a-learning-experience)
+            -   [Illustrative vignette on participants activity
+                indicating general activity of
+                participants](#illustrative-vignette-on-participants-activity-indicating-general-activity-of-participants)
+        -   [Activity system 2 - Constructing a game feature by
+            feature](#activity-system-2---constructing-a-game-feature-by-feature)
+            -   [Illustrative use of tools to mediate activity shown in
+                vignette
+                4.x](#illustrative-use-of-tools-to-mediate-activity-shown-in-vignette-4.x)
+            -   [Operations and actions within the system - Implementing
+                discrete code and design
+                structures](#operations-and-actions-within-the-system---implementing-discrete-code-and-design-structures)
+            -   [Applying activity theory to surface contradictions and
+                design tensions experienced by participants and
+                facilitator/s](#applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
     -   [Narrative exploration of
         contradictions](#narrative-exploration-of-contradictions)
     -   [C1 - contradictions involving the use of game programming and
@@ -79,21 +100,21 @@ title: 5. Exploration of the Formative Learning Design Process
         -   [Outroduction to this part of exploring Drama process and
             playtesting](#outroduction-to-this-part-of-exploring-drama-process-and-playtesting)
     -   [Chapter Discussion](#chapter-discussion)
-    -   [Observations / Discussions on Dimensions of
-        Authenticity](#observations-discussions-on-dimensions-of-authenticity)
-        -   [Observations on Authenticity in project
-            approaches](#observations-on-authenticity-in-project-approaches)
-        -   [The potentially awesome impact of lifting the lid on
-            authentic
-            technologies](#the-potentially-awesome-impact-of-lifting-the-lid-on-authentic-technologies)
-        -   [Different black boxes for different
-            goals](#different-black-boxes-for-different-goals)
-        -   [Increased scaffolding of tools can increase instrumental
-            agency but at what cost? EXPLORE AS TENSION? MOVE TO CH.
-            4?](#increased-scaffolding-of-tools-can-increase-instrumental-agency-but-at-what-cost-explore-as-tension-move-to-ch.-4)
-        -   [On the emergent and mutual nature of the design and
-            research process (AND link to
-            agency?](#on-the-emergent-and-mutual-nature-of-the-design-and-research-process-and-link-to-agency)
+        -   [Observations / Discussions on Dimensions of
+            Authenticity](#observations-discussions-on-dimensions-of-authenticity)
+            -   [The potentially awesome impact of lifting the lid on
+                authentic
+                technologies](#the-potentially-awesome-impact-of-lifting-the-lid-on-authentic-technologies)
+        -   [Discussion on scaffolding, affordences and
+            agency](#discussion-on-scaffolding-affordences-and-agency)
+            -   [Increased scaffolding of tools can increase
+                instrumental agency but at what
+                cost?](#increased-scaffolding-of-tools-can-increase-instrumental-agency-but-at-what-cost)
+            -   [Returning to discussion the emergent and mutual nature
+                of the design and what it has to say about participant
+                agency](#returning-to-discussion-the-emergent-and-mutual-nature-of-the-design-and-what-it-has-to-say-about-participant-agency)
+            -   [The goal of computational fluency as a form of
+                agency](#the-goal-of-computational-fluency-as-a-form-of-agency)
         -   [Summary of barriers and tensions explored in this
             chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
             -   [Exploring tensions involving and authentic tool
@@ -1440,19 +1461,23 @@ In summary, this chapter has explored the complexity of the interacting tools an
 
 
 
-## Observations / Discussions on Dimensions of Authenticity
+### Observations / Discussions on Dimensions of Authenticity
 
-NOT SURE HOW MUCH OF THIS SHOULD BE IN CHAPTER 4
+<!-- NOT SURE HOW MUCH OF THIS SHOULD BE HERE
 AND HOW MUCH IS NEEDED FOR THEISIS RQS.
-MOVE ALL HERE AND EVALUATE LATER
+MOVE ALL HERE AND EVALUATE LATER -->
 
-### Observations on Authenticity in project approaches
+
+
+As explored in the LR (recap for reader here )
 
 Authenticity in project approaches can profitably be applied to tools, processes and project goals  [@hung_engaged_2006]. Authenticity in goal here is clear. Participants make a real digital game. The authentic goal of making a game allowed participants to draw on tacit knowledge and navigate within implicit bounds reducing the need for intrusive instruction which might negatively effect feelings of agency.
 
 As explored in this chapter and in chapter four, the authenticity of the tools and processes involved are more complex.
 
 Playtesting processes are authentic and often informed by existing real experience as game players. These observations are in-line with existing research outlining the value of playtesting in game-making [FIND] and to address cultural barriers to coding cultures [@disalvo_glitch_2009].
+
+COVERING DIMENSIONS OF AUTHENITITY SEEMS LIKE A LOT HERE - TAKE A STEP BACK - WHAT IS NEEDED TO END THIS CHAPTER AND LINK TO MORE FINDINGS.
 
 There are examples of the authenticity of the audience being used by participants
 
@@ -1473,7 +1498,7 @@ CROSSREFF -  list the benefits here.
 
 
 
-### The potentially awesome impact of lifting the lid on authentic technologies   
+#### The potentially awesome impact of lifting the lid on authentic technologies   
 
 Lifting the lid on hidden technologies and concepts in hands-on, exploratory processes can be empowering for participants. Ratto explores this via critical making [@ratto_critical_2011], a process which playfully surfaces Latour's [@weibel_making_2005; @latour_cautious_2008] concepts of shifting matters of fact to matters of concern by exposing taken for granted artefacts as objects that have been designed (for better or worse). Conversations between participants showing an inspirational or engaging impact on previously unknown technology. For examples, exchanges among participants that communicated a sense of awe of how much effort and coding must be involved in a professional game based on the relative complexity of the code of their simple game.    
 
@@ -1481,14 +1506,17 @@ Lifting the lid on hidden technologies and concepts in hands-on, exploratory pro
     Student Helper 3: Think about how much effort goes into.
     Pearl: You just take things for granted don’t you?
 
-### Different black boxes for different goals
+### Discussion on scaffolding, affordences and agency
+
+
+#### Increased scaffolding of tools can increase instrumental agency but at what cost?
+
+<!-- EXPLORE AS TENSION
+EXPLORE Mircoworlds USING AFFORDANCE THEORY WITHIN CHAT. And talking of Delegated Agency in HCI -->
 
 My design decision to build the toolset as structure on top of authentic tools and languages can be likened to creating a protective harbour to shield new users from the complexity of the underlying configuration of interrelated web-technologies and instead highlight design affordances that facilitate creative agency.
 
 Participants are able to leave the protective harbour by accessing more authentic documentation and moving beyond existing templates. The experience may be involve choppier waters but the tools and processes remain familiar.
-
-
-### Increased scaffolding of tools can increase instrumental agency but at what cost? EXPLORE AS TENSION? MOVE TO CH. 4?
 
 Increased scaffolding of learner resources and tools can increase instrumental agency for novice coders but at the potential cost of reducing access to the tools and processes of authentic creative communities. Many of the design adaptations described in this chapter align with motivations of constructionist design principles explored in the Literature review [@resnick_design_2005]. Techniques or concepts which are embodied in both the Scratch software and the adaptations to the tool set of this intervention include:
 
@@ -1497,8 +1525,8 @@ Increased scaffolding of learner resources and tools can increase instrumental a
 -  supporting immediacy of creative process by providing a library of assets.
 - The use of black boxes?
 
-IT FEELS LIKE IT WOULD BE GOOD TO TRY TO SQUEEZE THIS BIT INTO CHAPTER 4 ?
-PERHAPS via some ADDITION TO A TABLE AT THE END OF CHATPER 4
+<!-- IT FEELS LIKE IT WOULD BE GOOD TO TRY TO SQUEEZE THIS BIT INTO CHAPTER 4 ?
+PERHAPS via some ADDITION TO A TABLE AT THE END OF CHATP#### Different black boxes for different goalsER 4 -->
 
 While these elements of ethos are aligned, the process of supporting novices to use an authentic, text-based language and authoring tools used by professional community required more specific adaptations (o) : creating simplified but extendable starting template; highlighting code variables as key design affordances; using a grid structure to visually facilitate level design; and simplifying the syntax and the structure of the game code.
 
@@ -1510,24 +1538,17 @@ The _black box_ design decisions of use of tools and documentation create a kind
 <!-- This is a long-running theme of constructionist research, with roots in Papert concept of Microworlds, typically embodied by the Mathland environment, where participants control a robotic turtle with lines of simplified LOGO code language.  Because the turtle speaks only LOGO, children are drawn to speak LOGO to progress. Thus, Scratch and Mircoworlds can be seen as digital playgrounds with affordances that encourage certain types of play. -->
 
 
-### On the emergent and mutual nature of the design and research process (AND link to agency?
+#### Returning to discussion the  emergent and mutual nature of the design and what it has to say about participant  agency
 
-As explored in Chapters 3 and 4, the process of this chapter is in line with exploratory research perspectives with an remit to explore emergent tensions come into focus in a particular setting. This allows a subsequent refocusing of research to explore these emerging issues in more depth via iterations.  
+My role to encourage a learning environment which met the following characteristics via changes in learning design has been explored in this chapter via a detailed exploration of tensions arising, changes and inherrent motivations.
 
-The mutuality of the process has also been described. The learning design changed as a result of feedback and concrete additions ans suggestions from young people and their parents, university students and colleagues.
+Agency in this learning process was present via the input of participants in the changing design of the program. At times through direct requests, at times through my responses to behaviours demonstrating their needs and motivations.
 
-ADD MORE ON DBR AND THE FORMATIVE INTERVENTION as discussion of specifics or challenges
+Playtesting as a process and the use of GDPs in varied ways by participants was noticed and I added more affordences designed to facilitate these aspects. Affordances here as a form of delegated agency.
 
-In particular, playtesting as a process and the use of GDPs in varied ways by participants was noticed and more affordences designed to facilitate these asepcts.
+#### The goal of computational fluency as a form of agency
 
-Agency in this learning process was present via the input of participants in the changing design of the program.
-These elements are explored in relation the impact on participats in Chapters 6 and 7,
-
-The process of examining tensions in the design, some which address the aims and objectives of myself and those of participts,  and subsequent attempts to align them via changes to the design aloow of a more focused understaning of the movitation for undertaking game making from my own perspective as well as that of participants.
-
-My role to encourage a learning environment which met the following characteristics via changes in learning design is now explored via a detailed exploration of tnsions arising, changes and motivations.
-
-In summary linking to computational fluency due to following factors
+In reflection I wanted to encourage the growth of computational fluency. I did so in part by exploring these dimensions of the learning design in line with wider conceptions of PBL and UDL.
 
   - particpant voice and choice
   - peer learning and ongoing sharing of process via product
@@ -1535,6 +1556,9 @@ In summary linking to computational fluency due to following factors
   - avoiding stuckness
   - linking to authentic practices and commuities
 
+While computational fluency is a valid of the objectives of the game making activity goal, this chapter has (re)surfaced the many barriers to achieving this via the text coding of a multi-media project.
+
+The next section provides a summary of those barriers via a rough analysis as part of the process of sufacing tensions and supported by the thematic analysis of video data.
 
 <!-- This approach was more prescriptive than I would have adopted, however it worked well.
 This hesitation overcome by intervention from others can be explored in terms of agency.
@@ -1542,8 +1566,6 @@ This hesitation overcome by intervention from others can be explored in terms of
 The shift of perspective from others and the structure to try it out was very helpful in overcoming conflicts stemming from my pre-conceptions. -->
 
 <!-- The students focused on increasing a scaffolded task which increased the instrumental agency of the participants. -->
-
-
 <!-- There is a connection in this process to foundational theories in the area of HCI and computing education.
 
   - Affordances
