--- a/_posts/thesis_chapters/tocs/2024-9-5-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-9-5-Design.md_toc.md
@@ -3,6 +3,27 @@
     -   [Research Questions - April
         2024](#research-questions---april-2024)
     -   [Chapter Introduction](#chapter-introduction)
+    -   [Analysis of dimensions of game making activity using 3GAT
+        framework](#analysis-of-dimensions-of-game-making-activity-using-3gat-framework)
+        -   [Environmental factors and
+            objectives](#environmental-factors-and-objectives)
+        -   [Activity system 1 - a novice game making community making
+            games as a learning
+            experience](#activity-system-1---a-novice-game-making-community-making-games-as-a-learning-experience)
+            -   [Illustrative vignette on participants activity
+                indicating general activity of
+                participants](#illustrative-vignette-on-participants-activity-indicating-general-activity-of-participants)
+        -   [Activity system 2 - Constructing a game feature by
+            feature](#activity-system-2---constructing-a-game-feature-by-feature)
+            -   [Illustrative use of tools to mediate activity shown in
+                vignette
+                4.x](#illustrative-use-of-tools-to-mediate-activity-shown-in-vignette-4.x)
+            -   [Operations and actions within the system - Implementing
+                discrete code and design
+                structures](#operations-and-actions-within-the-system---implementing-discrete-code-and-design-structures)
+            -   [Applying activity theory to surface contradictions and
+                design tensions experienced by participants and
+                facilitator/s](#applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
     -   [Narrative exploration of
         contradictions](#narrative-exploration-of-contradictions)
     -   [C1 - contradictions involving the use of game programming and
@@ -67,21 +88,21 @@
         -   [Outroduction to this part of exploring Drama process and
             playtesting](#outroduction-to-this-part-of-exploring-drama-process-and-playtesting)
     -   [Chapter Discussion](#chapter-discussion)
-    -   [Observations / Discussions on Dimensions of
-        Authenticity](#observations-discussions-on-dimensions-of-authenticity)
-        -   [Observations on Authenticity in project
-            approaches](#observations-on-authenticity-in-project-approaches)
-        -   [The potentially awesome impact of lifting the lid on
-            authentic
-            technologies](#the-potentially-awesome-impact-of-lifting-the-lid-on-authentic-technologies)
-        -   [Different black boxes for different
-            goals](#different-black-boxes-for-different-goals)
-        -   [Increased scaffolding of tools can increase instrumental
-            agency but at what cost? EXPLORE AS TENSION? MOVE TO CH.
-            4?](#increased-scaffolding-of-tools-can-increase-instrumental-agency-but-at-what-cost-explore-as-tension-move-to-ch.-4)
-        -   [On the emergent and mutual nature of the design and
-            research process (AND link to
-            agency?](#on-the-emergent-and-mutual-nature-of-the-design-and-research-process-and-link-to-agency)
+        -   [Observations / Discussions on Dimensions of
+            Authenticity](#observations-discussions-on-dimensions-of-authenticity)
+            -   [The potentially awesome impact of lifting the lid on
+                authentic
+                technologies](#the-potentially-awesome-impact-of-lifting-the-lid-on-authentic-technologies)
+        -   [Discussion on scaffolding, affordences and
+            agency](#discussion-on-scaffolding-affordences-and-agency)
+            -   [Increased scaffolding of tools can increase
+                instrumental agency but at what
+                cost?](#increased-scaffolding-of-tools-can-increase-instrumental-agency-but-at-what-cost)
+            -   [Returning to discussion the emergent and mutual nature
+                of the design and what it has to say about participant
+                agency](#returning-to-discussion-the-emergent-and-mutual-nature-of-the-design-and-what-it-has-to-say-about-participant-agency)
+            -   [The goal of computational fluency as a form of
+                agency](#the-goal-of-computational-fluency-as-a-form-of-agency)
         -   [Summary of barriers and tensions explored in this
             chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
             -   [Exploring tensions involving and authentic tool
